--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 image:
-    repository: matt0x6f/xcpng-csi
+    repository: ghcr.io/matt0x6f/xcpng-csi
     #    tag: latest
 
 ## service account to use (if necessary)
